--- a/JenkinsFile
+++ b/JenkinsFile
@@ -17,6 +17,12 @@ pipeline {
                      sh "${env.M2_HOME}/bin/mvn ${env.MVN_GOAL}"
                  }
              }
+         stage('Start container') {
+             steps {
+              sh 'docker compose up -d --no-color --wait'
+              sh 'docker compose ps'
+              }
+          }
          stage('Run tests against the container') {
               steps {
                   sh 'curl http://localhost:4444/ui/index.html#/ | jq'
