--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,40 +1,38 @@
 pipeline {
-
-    agent {
-            dockerfile {
-                args "-v maven-repository:/home/docker/.m2"
-            }
-    }
-    environment {
-        MVN_GOAL = 'clean verify'
-        M2_HOME = '/usr/share/maven'
-    }
+    agent any
     stages {
-         stage('Execute tests') {
-             steps {
-                     sh "${env.M2_HOME}/bin/mvn ${env.MVN_GOAL}"
-             }
-         stage('Start container') {
-             steps {
-              sh 'docker compose up -d --no-color --wait'
-              sh 'docker compose ps'
-              }
-          }
-         stage('Run tests against the container') {
-              steps {
-                  sh 'curl http://localhost:4444/ui/index.html#/ | jq'
-         }
-     }
-     post {
-         always {
-             allure([
-                 includeProperties: false,
-                 jdk: '',
-                 properties: [],
-                 reportBuildPolicy: 'ALWAYS',
-                 results: [[path: 'target/allure-results']]
-               ])
-         }
-     }
- }
+        stage ("The connect verification") {
+           steps {
+              echo "I find Jenkinsfile"
+           }
+        }
+        stage ("Build Docker"){
+            steps {
+              sh 'docker-compose up -d'
+            }
+        }
+        stage ('Run Test') {
+            steps {
+                sh '''
+                   wrap([$class: 'Xvfb', screen: "${env.X_SCREEN}", 'timeout': 15, additionalOptions: '-fbdir /tmp']) 
+                    sh "${env.M2_HOME}/bin/mvn ${env.MVN_GOAL}"
+                '''
+            }
+        }
+
+    }
+      post {
+            always {
+            allure([
+             includeProperties: false,
+             jdk: '',
+             properties: [],
+             reportBuildPolicy: 'ALWAYS',
+             results: [[path: 'target/allure-results']]
+            ])
+             sh 'docker-compose down'
+             echo 'Finished'
+            }
+      }
+
 }
