--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,20 +6,18 @@ pipeline {
               echo "I find JenkinsFile"
            }
         }
- environment {
-        MVN_GOAL = 'clean verify'
-        M2_HOME = '/usr/share/maven'
-    }
         stage ("Build Docker"){
             steps {
-              sh 'docker-compose up -d'
+               sh 'docker compose up -d --no-color --wait'
+               sh 'docker compose ps'
             }
         }
         stage ('Run Test') {
             steps {
                 sh 'curl http://localhost:4444/ui/index.html#/ | jq'
-                  sh "${env.M2_HOME}/bin/mvn ${env.MVN_GOAL}"
-               
+                   wrap([$class: 'Xvfb', screen: "${env.X_SCREEN}", 'timeout': 15, additionalOptions: '-fbdir /tmp']) 
+                    sh "${env.M2_HOME}/bin/mvn ${env.MVN_GOAL}"
+                
             }
         }
 
