--- a/JenkinsFile
+++ b/JenkinsFile
@@ -10,18 +10,19 @@ pipeline {
               echo "I find JenkinsFile"
            }
         }
+	stage('Execute tests') {
+             steps {
+                 sh '${env.M2_HOME}/bin/mvn ${env.MVN_GOAL}'
+                 }
         stage ("Build Docker"){
             steps {
                sh 'docker compose up -d'
-               sh 'docker compose ps'
             }
         }
         stage ('Run Test') {
             steps {
-                sh " 'curl http://localhost:4444/ui/index.html#/ | jq'   
-                    sh "${env.M2_HOME}/bin/mvn ${env.MVN_GOAL}"
-                "
-            }
+                sh  'curl http://localhost:4444/ui/index.html#/ | jq'   
+             }
         }
 
     }
