--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,7 +8,7 @@ pipeline {
         }
         stage ("Build Docker"){
             steps {
-              sh 'sudo docker-compose build -s'
+              sh 'sudo docker-compose build -S'
               sh 'sudo docker-compose up -d'
             }
         }
