--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,14 +8,14 @@ pipeline {
         }
         stage ("Build Docker"){
             steps {
-              sh 'sudo docker-compose build -S'
+              sh 'sudo docker-compose build'
               sh 'sudo docker-compose up -d'
             }
         }
         stage ('Run Test') {
             steps {
                 sh '''
-                   wrap([$class: 'Xvfb', screen: "${env.X_SCREEN}", 'timeout': 15, additionalOptions: '-fbdir /tmp']) 
+                    sh 'curl http://localhost:4444/ui/index.html#/ | jq'
                     sh "${env.M2_HOME}/bin/mvn ${env.MVN_GOAL}"
                 '''
             }
