--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,8 +8,8 @@ pipeline {
         }
           stage ("Build Docker"){
             steps {
-              sh 'sudo docker-compose build'
-              sh 'sudo docker-compose up -d'
+              sh 'docker-compose build'
+              sh 'docker-compose up -d'
             }
         }
         stage ('Run Test') {
