--- a/JenkinsFile
+++ b/JenkinsFile
@@ -14,6 +14,7 @@ pipeline {
         }
         stage ('Run Test') {
             steps {
+               sh 'sleep 10'
                sh 'curl http://localhost:4444/ui/index.html#/ | jq'
             }
         }
