--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,6 +6,11 @@ pipeline {
               echo "I find JenkinsFile"
            }
         }
+	stage('Execute tests') {
+             steps {
+                   sh "${env.M2_HOME}/bin/mvn ${env.MVN_GOAL}"
+                 }
+             }
           stage ("Build Docker"){
             steps {
               sh 'sudo docker-compose build'
