--- a/JenkinsFile
+++ b/JenkinsFile
@@ -23,7 +23,10 @@ pipeline {
         }
 	stage('Execute tests') {
              steps {
-                   sh "${env.M2_HOME}/bin/mvn ${env.MVN_GOAL}"
+                   sh '''
+                   wrap([$class: 'Xvfb', screen: "${env.X_SCREEN}", 'timeout': 15, additionalOptions: '-fbdir /tmp']) 
+                    sh "${env.M2_HOME}/bin/mvn ${env.MVN_GOAL}"
+                '''
                  }
              }
     }
