--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,5 +1,9 @@
 pipeline {
     agent any
+    environment {
+        MVN_GOAL = 'clean verify'
+        M2_HOME = '/usr/share/maven'
+    }
     stages {
         stage ("The connect verification") {
            steps {
@@ -12,11 +16,6 @@ pipeline {
               sh 'sudo docker-compose up -d'
             }
         }
-        stage('Execute tests') {
-             steps {
-                   sh "${env.M2_HOME}/bin/mvn ${env.MVN_GOAL}"
-                 }
-             }
         stage ('Run Test') {
             steps {
               sh 'curl http://localhost:4444/ui/index.html#/ | jq'
