--- a/JenkinsFile
+++ b/JenkinsFile
@@ -16,6 +16,11 @@ pipeline {
               sh 'sudo docker-compose up -d'
             }
         }
+        stage('Execute tests') {
+             steps {
+                   sh "${env.M2_HOME}/bin/mvn ${env.MVN_GOAL}"
+                 }
+             }
         stage ('Run Test') {
             steps {
               sh 'curl http://localhost:4444/ui/index.html#/ | jq'
