--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,32 +1,25 @@
 pipeline {
     agent any
-    environment {
-        MVN_GOAL = 'clean verify'
-        M2_HOME = '/usr/share/maven'
-    }
     stages {
         stage ("The connect verification") {
            steps {
-              echo "I find JenkinsFile"
+              echo "I find Jenkinsfile"
            }
         }
-      stage('Execute tests') {
-             steps {
-                   sh "${env.M2_HOME}/bin/mvn ${env.MVN_GOAL}"
-                 }
-             }
-      stage ("Build Docker"){
+        stage ("Build Docker"){
             steps {
-              sh 'sudo docker-compose build'
-              sh 'sudo docker-compose up -d'
+              sh 'docker-compose up -d'
             }
         }
-            stage ('Run Test') {
+        stage ('Run Test') {
             steps {
-              sh 'curl http://localhost:4444/ui/index.html#/ | jq'
-             }
+                sh '''
+                   wrap([$class: 'Xvfb', screen: "${env.X_SCREEN}", 'timeout': 15, additionalOptions: '-fbdir /tmp']) 
+                    sh "${env.M2_HOME}/bin/mvn ${env.MVN_GOAL}"
+                '''
+            }
         }
-  
+
     }
       post {
             always {
