--- a/JenkinsFile
+++ b/JenkinsFile
@@ -3,7 +3,7 @@ pipeline {
     stages {
         stage ("The connect verification") {
            steps {
-              echo "I find Jenkinsfile"
+              echo "I find JenkinsFile"
            }
         }
         stage ("Build Docker"){
@@ -14,10 +14,8 @@ pipeline {
         }
         stage ('Run Test') {
             steps {
-                sh "
                  sh "${env.M2_HOME}/bin/mvn ${env.MVN_GOAL}"
-                "
-            }
+             }
         }
 
     }
