--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,9 +1,8 @@
 pipeline {
     agent {
-            docker {
-              args '-v $HOME:/home/jenkins'
-            }
-        }
+           docker {
+           image 'node:16.13.1-alpine' }
+                  }
     environment {
         MVN_GOAL = 'clean verify'
         M2_HOME = '/usr/share/maven'
